# llvm-project

./: .gitignore
clang/include/clang/Basic/: LangOptions.def
clang/include/clang/Driver/: Options.td  SanitizerArgs.h
clang/lib/CodeGen/: BackendUtil.cpp  CGOpenMPRuntime.cpp  CodeGenAction.cpp
clang/lib/Driver/: SanitizerArgs.cpp
clang/lib/Driver/ToolChains/: Clang.cpp
compiler-rt/lib/sanitizer_common/: sanitizer_vector.h
compiler-rt/lib/tsan/rtl/: CMakeLists.txt  concurrency_vector.h  dpst.cpp  (+28 more)
llvm/lib/Analysis/: CMakeLists.txt  OMPTargetRoutineAnalysis.cpp
openmp/cmake/: OpenMPTesting.cmake
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/ballista/: CMakeLists.txt  ballista_global.c
openmp/libomptarget/include/: ballista.h  ballista_defs.h  device.h  omptarget.h  omptargetplugin.h  rtl.h
openmp/libomptarget/plugins/: exports
openmp/libomptarget/src/: CMakeLists.txt  LegacyAPI.cpp  api.cpp  ballista.cpp  ballista_interface.cpp  device.cpp  device.h  exports  interface.cpp  ompt-target.cpp  ompt-target.h  omptarget.cpp  private.h  rtl.cpp
openmp/libomptarget/test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
openmp/runtime/: CMakeLists.txt
openmp/runtime/cmake/: config-ix.cmake
openmp/runtime/src/: exports_so.txt  kmp_tasking.cpp  ompt-event-specific.h  ompt-general.cpp  ompt-internal.h  ompt-target-api.h
openmp/runtime/test/: CMakeLists.txt  lit.cfg
openmp/tools/archer/: ompt-tsan.cpp
openmp/tools/taskracer/: CMakeLists.txt  control.py  graph-predefined.h  ompt-tsan-archer-taskdep.cpp  ompt-tsan.cpp  taskdep_predefined.h
(+35 files in other folders)
